--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jobs-app",
+  "name": "philamila-app",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -42,6 +42,7 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^5.1.0",
     "@mswjs/data": "^0.10.2",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
