--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.34.2",
+    "undici": "^6.19.8",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
